--- a/_source/css/sass/mootor.scss
+++ b/_source/css/sass/mootor.scss
@@ -16,11 +16,12 @@ body {
 // Header
 
 #header {
-    padding: 1.8em 1em;
+    // padding: 1.8em 1em;
     text-align: left;
     z-index: 9999;
     position: fixed;
     top:0;
+    height: 7.84em; /* sqare root of h1 font-size */
     nav {
         position: absolute;
         margin-top: 0;
@@ -36,20 +37,24 @@ body {
         text-align: center;
         font-size: 2.6em;
         letter-spacing: -0.07em;
+        line-height: 2.6em;
     }
 }
 
 #panels .panel {
     width: 100%;
     max-width: 100%;
+    min-height: 100%;
+    margin-top: 7.84em; /* equal to #header's height */
 }
 
 #panels {
     width: 100%;
+    min-height: 100%;
 }
 
 // Hacks
-
+ 
 #panels .panel {
     // Prevents flicker on transform3d (iOS)    
     -webkit-transition-duration:0;
