--- a/_source/css/sass/mootor.ui.scss
+++ b/_source/css/sass/mootor.ui.scss
@@ -1,4 +1,4 @@
-@import "compass/css3" ;
+// User Interface plugin
 
 .moo_checkbox {
     display: block;
@@ -34,8 +34,6 @@
 .stdform {
     width: 100%;
     text-align: center;
-    background: $subColor1;
-    border: 1px solid $subColor1C;
     padding: 2%;
     width: 90%;
     margin: 0 auto;
