--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -14,12 +15,12 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
   font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
 }
 
-html {
+body {
   line-height: 1;
 }
 
@@ -54,64 +55,57 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 62.5%;
-  text-align: center;
-}
-
-h2 {
-  line-height: 140%;
-  font-size: 7em;
-}
-
-h3 {
-  line-height: 140%;
-  font-size: 3em;
-}
-
-p {
-  line-height: 140%;
-  font-size: 3em;
-  text-align: justify;
-  padding: 1em;
-  line-height: 150%;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, "Droid Serif", serif;
-  letter-spacing: 0;
-}
-
-h2 {
-  margin: 0.125em 0;
-}
-
-h3 {
-  margin: 0.25em 0;
-}
-
 #header {
-  position: absolute;
+  padding: 1.8em 1em;
+  text-align: left;
+  z-index: 9999;
+  position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9999;
+}
+#header nav {
+  position: absolute;
+  margin-top: 0;
+  top: 2.3em;
+}
+#header nav a {
+  padding: .5em 1em;
+  width: auto;
+  display: inline;
 }
 
-#panels,
-#blank_panel,
-.panel {
+#panels {
+  min-height: 100%;
+  width: 100%;
   position: absolute;
   left: 0;
-  top: 0;
+}
+#panels .panel {
+  width: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  position: absolute;
 }
 
 nav ul,
 nav ol {
   list-style: none;
 }
-
 nav a {
   text-decoration: none;
   text-align: left;
   display: block;
+}
+
+#panels .panel {
+  -webkit-transition-duration: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+a,
+a:hover,
+a:focus {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 .moo_checkbox {
@@ -143,8 +137,6 @@ nav a {
 .stdform {
   width: 100%;
   text-align: center;
-  background: white;
-  border: 1px solid #dddddd;
   padding: 2%;
   width: 90%;
   margin: 0 auto;
@@ -156,27 +148,13 @@ nav a {
 }
 
 body {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 62.5%;
+  text-align: center;
   background: #000;
 }
 
-#header {
-  padding: 1.8em 1em;
-  text-align: left;
-  z-index: 9999;
-  position: fixed;
-  top: 0;
-}
-#header nav {
-  position: absolute;
-  margin-top: 0;
-  top: 2.3em;
-}
-#header nav a {
-  padding: .5em 1em;
-  width: auto;
-  display: inline;
-}
-#header h1 {
+h1 {
   line-height: 140%;
   font-size: 2.3em;
   text-align: center;
@@ -184,24 +162,25 @@ body {
   letter-spacing: -0.07em;
 }
 
-#panels .panel {
-  width: 100%;
-  max-width: 100%;
+h2 {
+  line-height: 140%;
+  font-size: 7em;
+  letter-spacing: -0.1em;
 }
 
-#panels {
-  width: 100%;
+h3 {
+  line-height: 140%;
+  font-size: 3em;
 }
 
-#panels .panel {
-  -webkit-transition-duration: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-}
-
-a,
-a:hover,
-a:focus {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+p {
+  line-height: 140%;
+  font-size: 3em;
+  text-align: justify;
+  padding: 1em;
+  line-height: 150%;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, "Droid Serif", serif;
+  letter-spacing: 0;
 }
 
 .panel {
@@ -212,12 +191,7 @@ a:focus {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
   color: white;
   font-weight: bold;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #666666), color-stop(100%, #333333));
-  background: -webkit-linear-gradient(#666666, #333333);
-  background: -moz-linear-gradient(#666666, #333333);
-  background: -o-linear-gradient(#666666, #333333);
-  background: -ms-linear-gradient(#666666, #333333);
-  background: linear-gradient(#666666, #333333);
+  background: #333333;
   border: 1px solid #333333;
 }
 #header nav a {
@@ -252,11 +226,6 @@ nav a {
 }
 
 .nav.active {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5fbcf9), color-stop(100%, #29a6f7));
-  background: -webkit-linear-gradient(#5fbcf9, #29a6f7);
-  background: -moz-linear-gradient(#5fbcf9, #29a6f7);
-  background: -o-linear-gradient(#5fbcf9, #29a6f7);
-  background: -ms-linear-gradient(#5fbcf9, #29a6f7);
-  background: linear-gradient(#5fbcf9, #29a6f7);
+  background: #29a6f7;
   color: white;
 }
