--- a/_source/css/sass/_mootor.nav.scss
+++ b/_source/css/sass/_mootor.nav.scss
@@ -1,48 +1,53 @@
+/* 
+ * Apply a natural box layout model to all elements 
+ *
+ * Useful for the padding does not change the height of the elements
+ *
+ */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
 // Navigation plugin
 
 @mixin base-anchor {
     text-decoration: none ;
 }
 
+body {
+    height: 100%;
+}
+
 // Header
 
 #header {
-    // padding: 1.8em 1em;
     text-align: left;
     z-index: 9999;
     position: fixed;
     top:0;
     width: 100%;
-    padding: 1.8em 1em;
+    padding: 1em 1em;
     nav {
         position: absolute;
         margin-top: 0;
-        top: 2.3em;
+        top: 1.6em;
     }
     nav a {
         padding: .5em 1em;
         width: auto;
         display: inline;
+        font-size: 1.5em;
     }
 }
 
 // Panels 
 
-#panels .panel {
-    width: 100%;
-    max-width: 100%;
-    min-height: 100%;
-}
-
 #panels {
-    min-height: 100%;
-    width: 100%;
     position: absolute;
+    width: 100%;
     left: 0;
+    min-height: 100%;
     .panel {
-        width: 100%;
-        max-width: 100%;
         min-height: 100%;
+        width: 100%;
         position: absolute;
     }
 }
@@ -60,6 +65,7 @@ nav {
         text-decoration: none;
         text-align: left;
         display: block;
+        padding: 1em;
     }   
 }
 
