--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -10,6 +10,7 @@ $readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', se
 
 @import "compass/reset" ;
 @import "compass/css3" ;
+@import "compass/utilities" ;
 @import "text";
 @import "colors";
 @import "../../_source/css/sass/_mootor.nav.scss";
